--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h3>
         <a href="./public/movie-ranking.html" Ranking Project>Movie Ranking Project</a>
     </h3>
-        <a href="./public/movie-ranking.html"><img src="./assets/images/Movie Ranking.png" alt="Movie Ranking project preview" width="75%"/></a></body>
+        <a href="./public/movie-ranking.html"><img src="./assets/images/Movie Ranking.png" alt="Movie Ranking project preview" width="300px"/></a></body>
 
 
     <h3>
         <a href="./public/birthday-invite.html">You're Invited Project</a>
     </h3>
-        <a href="./public/birthday-invite.html"><img src="./assets/images/You're Invited.png" alt="You're Invited project preview" width="70%"/></a>
+        <a href="./public/birthday-invite.html"><img src="./assets/images/You're Invited.png" alt="You're Invited project preview" width="300px"/></a>
     <hr>
 
     <h4>
